[package]
name = "pplsystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
endian_codec = { path = "./endian_codec/", version = "0.1.2" }
memmap2 = "0.9.4"
pdb = "0.8.0"
pe-parser = "0.5.1"
symbolic = "12.8.0"
sysinfo = "0.30.7"
ureq = "2.9.6"
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_Threading", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_Com", "implement", "Win32_UI", "Win32_UI_Shell", "Win32_System_Com_Marshal", "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_System_Rpc", "Wdk_Foundation", "Wdk_Storage", "Wdk_Storage_FileSystem"] }
