[package]
name = "endian_codec_derive"
version = "0.1.2"
authors = ["Sylwester Rąpała <sylwesterrapala@outlook.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "Macros implementation for endian_codec crate"
repository = "https://github.com/xoac/endian_codec"
categories = ["no-std", "parsing"]
keywords = ["derive", "endian", "bytes"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
